logs/goodjob.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Goodjob-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/JsonForm-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/JsonSir-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Python_EasyConfig-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/Python_RESTArt-0.1.5.dist-info'...
Listing './lib/python3.5/site-packages/RESTArt_CrossDomain-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/RESTArt_Mongo-0.1.4.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp/tests'...
Listing './lib/python3.5/site-packages/amqp-1.4.9.dist-info'...
Listing './lib/python3.5/site-packages/anyjson'...
Listing './lib/python3.5/site-packages/anyjson-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/billiard'...
Listing './lib/python3.5/site-packages/billiard/dummy'...
Listing './lib/python3.5/site-packages/billiard/py3'...
Listing './lib/python3.5/site-packages/billiard/tests'...
Listing './lib/python3.5/site-packages/billiard-3.3.0.23.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/celery'...
Listing './lib/python3.5/site-packages/celery/app'...
Listing './lib/python3.5/site-packages/celery/apps'...
Listing './lib/python3.5/site-packages/celery/backends'...
Listing './lib/python3.5/site-packages/celery/backends/database'...
Listing './lib/python3.5/site-packages/celery/bin'...
Listing './lib/python3.5/site-packages/celery/concurrency'...
Listing './lib/python3.5/site-packages/celery/contrib'...
Listing './lib/python3.5/site-packages/celery/events'...
Listing './lib/python3.5/site-packages/celery/fixups'...
Listing './lib/python3.5/site-packages/celery/loaders'...
Listing './lib/python3.5/site-packages/celery/security'...
Listing './lib/python3.5/site-packages/celery/task'...
Listing './lib/python3.5/site-packages/celery/tests'...
Listing './lib/python3.5/site-packages/celery/tests/app'...
Listing './lib/python3.5/site-packages/celery/tests/backends'...
Listing './lib/python3.5/site-packages/celery/tests/bin'...
Listing './lib/python3.5/site-packages/celery/tests/bin/proj'...
Listing './lib/python3.5/site-packages/celery/tests/compat_modules'...
Listing './lib/python3.5/site-packages/celery/tests/concurrency'...
Listing './lib/python3.5/site-packages/celery/tests/contrib'...
Listing './lib/python3.5/site-packages/celery/tests/events'...
Listing './lib/python3.5/site-packages/celery/tests/fixups'...
Listing './lib/python3.5/site-packages/celery/tests/functional'...
Listing './lib/python3.5/site-packages/celery/tests/security'...
Listing './lib/python3.5/site-packages/celery/tests/slow'...
Listing './lib/python3.5/site-packages/celery/tests/tasks'...
Listing './lib/python3.5/site-packages/celery/tests/utils'...
Listing './lib/python3.5/site-packages/celery/tests/worker'...
Listing './lib/python3.5/site-packages/celery/utils'...
Listing './lib/python3.5/site-packages/celery/utils/dispatch'...
Listing './lib/python3.5/site-packages/celery/worker'...
Listing './lib/python3.5/site-packages/celery-3.1.17.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-4.0.dist-info'...
Listing './lib/python3.5/site-packages/easyconfig'...
Listing './lib/python3.5/site-packages/funtests'...
Listing './lib/python3.5/site-packages/goodjob'...
Listing './lib/python3.5/site-packages/goodjob/celery'...
Listing './lib/python3.5/site-packages/goodjob/cli'...
Listing './lib/python3.5/site-packages/goodjob/config'...
Listing './lib/python3.5/site-packages/goodjob/jobs'...
Listing './lib/python3.5/site-packages/goodjob/logs'...
Listing './lib/python3.5/site-packages/goodjob/operators'...
Listing './lib/python3.5/site-packages/goodjob/resources'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/jsonform'...
Listing './lib/python3.5/site-packages/jsonpatch-1.7.dist-info'...
Listing './lib/python3.5/site-packages/jsonpointer-1.14.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jsonsir'...
Listing './lib/python3.5/site-packages/jsonsir/contrib'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/tests'...
Listing './lib/python3.5/site-packages/kombu/tests/async'...
Listing './lib/python3.5/site-packages/kombu/tests/transport'...
Listing './lib/python3.5/site-packages/kombu/tests/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/tests/utils'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/django'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management'...
Listing './lib/python3.5/site-packages/kombu/transport/django/management/commands'...
Listing './lib/python3.5/site-packages/kombu/transport/django/migrations'...
Listing './lib/python3.5/site-packages/kombu/transport/django/south_migrations'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-3.0.37.dist-info'...
Listing './lib/python3.5/site-packages/mongoengine'...
Listing './lib/python3.5/site-packages/mongoengine/base'...
Listing './lib/python3.5/site-packages/mongoengine/queryset'...
Listing './lib/python3.5/site-packages/mongoengine-0.15.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-2.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.3.egg-info'...
Listing './lib/python3.5/site-packages/restart'...
Listing './lib/python3.5/site-packages/restart/config'...
Listing './lib/python3.5/site-packages/restart/ext'...
Listing './lib/python3.5/site-packages/restart_crossdomain'...
Listing './lib/python3.5/site-packages/restart_mongo'...
Listing './lib/python3.5/site-packages/restart_mongo/ext'...
Compiling './lib/python3.5/site-packages/restart_mongo/utils.py'...
***   File "./lib/python3.5/site-packages/restart_mongo/utils.py", line 20
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
